# finpilot

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEEP_RESEARCH.md  LICENSE  README.md  RISK_DISCLOSURE.md  SECURITY.md  pyproject.toml  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.playwright-cli/: page-2026-04-04T19-07-30-617Z.yml  page-2026-04-04T19-07-48-745Z.yml  page-2026-04-04T19-08-19-006Z.yml  page-2026-04-04T19-08-19-957Z.yml  page-2026-04-04T19-08-19-981Z.yml  page-2026-04-04T19-08-36-099Z.yml  page-2026-04-04T19-09-01-521Z.yml  page-2026-04-04T19-09-31-957Z.yml  page-2026-04-06T02-16-23-071Z.yml  page-2026-04-08T06-38-05-848Z.yml  page-2026-04-08T06-38-18-630Z.yml  page-2026-04-08T06-38-29-304Z.yml  page-2026-04-08T06-38-34-152Z.yml  page-2026-04-08T06-39-05-879Z.yml
backend/: __init__.py  config.py  database.py  main.py  portfolio_state.py
backend/agents/: base_agent.py  graph_runtime.py  orchestrator.py  registry.py
backend/api/: middleware.py
backend/backtester/: __init__.py  artifacts.py  benchmark.py  cache.py  capabilities.py  costs.py  engine.py  metrics.py  universe.py  (+2 more)
docs/: agent-library.md  architecture.md  backtesting-guide.md  data-sources.md  hallucination-prevention.md  live-trading-guide.md  security-model.md
frontend/: index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: export_audit.py  run_dev.py  smoke_test.sh  validate_env.py
(+201 files in other folders)
