[project]
name = "finpilot"
version = "0.1.0"
description = "Local-first AI investing lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sse-starlette>=2.1.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "aiosqlite>=0.20.0",
  "langgraph>=0.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-anthropic>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langchain-ollama>=0.2.0",
  "vectorbt>=0.26.0",
  "yfinance>=0.2.45",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "ta>=0.11.0",
  "fredapi>=0.5.0",
  "praw>=7.7.0",
  "httpx>=0.27.0",
  "alpaca-py>=0.30.0",
  "python-dotenv>=1.0.0",
  "structlog>=24.0.0",
  "rich>=13.0.0",
  "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
